--- a/content/03-LeetCode/Problems/0001.Two_Sum.md
+++ b/content/03-LeetCode/Problems/0001.Two_Sum.md
@@ -44,3 +44,6 @@ class Solution:
 
 ---
 # History
+Jan-25-2026 Hinted 
+- Check initial dic is correct assign `{}`
+- `IndexError: list assignment index out of range`
