--- a/content/03-LeetCode/Problems/0005.Longest_Palindromic_Substring.md
+++ b/content/03-LeetCode/Problems/0005.Longest_Palindromic_Substring.md
@@ -1,6 +1,6 @@
 ---
 tags:
-  - ds/twop
+  - ds/2p
   - cm/adobe
 company:
   - Adobe
@@ -17,8 +17,8 @@ Return the longest contiguous *substring* that is palindrome.
 
 ---
 
-Method 1: Brute Force, check every possible substring. take O($n^3$)
-Method 2: Expand around the center
+- Method 1: Brute Force, check every possible substring. take O($n^3$)
+- Method 2: Expand around the center
 ## Method: Expand around the center
 ### Approach
 Every palindrome can be expanded from its **center**.
