--- a/content/03-LeetCode/Problems/0020.Valid_Parentheses.md
+++ b/content/03-LeetCode/Problems/0020.Valid_Parentheses.md
@@ -12,6 +12,7 @@ Track: NeetCode150
 Given a string containing only the characters `()[]{}`, determine if it is valid. 
 A string is valid if every opening bracket is closed by the **same type** of bracket, and brackets are closed in the **correct nested order** (the most recent unmatched opening bracket is closed first). Return a boolean.
 
+> Use a stack to track opening brackets; each closing bracket must match the stack top, and the string is valid only if the stack ends empty.
 ---
 
 Method 1
