--- a/content/03-LeetCode/Problems/0042.Trapping_Rain_Water.md
+++ b/content/03-LeetCode/Problems/0042.Trapping_Rain_Water.md
@@ -1,15 +1,14 @@
 ---
 tags:
-  - ds/twop
+  - ds/2p
 ---
 Link: [42. Trapping Rain Water](https://leetcode.com/problems/trapping-rain-water/) - Hard
-Track: NeetCode150
 # Question
 ### Restate the problem
-Given an integer array, means the bar heights
-The water level is determined by `min(left_max, right_max)`
-`max(0, min(highest_left, highest_right) - height[i])`
-Return the total trapped water
+- Given an integer array, means the bar heights
+- The water level is determined by `min(left_max, right_max)`
+- `max(0, min(highest_left, highest_right) - height[i])`
+- Return the total trapped water
 # Method
 ### Approach - Two pointers
 - Set `left = 0`, `right = n - 1`
@@ -19,12 +18,12 @@ Return the total trapped water
 - While `left < right`:
 	- If `left_max <= right_max`:
 		- Move left
+		- Water trapped at `left` is `left_max - height[left]`, avoid negative
 		- Update `left_max`
-		- Water trapped at `left` is `left_max - height[left]`
 	- Else:
 		- Move right
+		- Water trapped at `right` is `right_max - height[right`, avoid negative
 		- Update `right_max`
-		- Water trapped at `right` is `right_max - height[right`
 #### Why it works
 The smaller boundary determines the water level, so we can safely process the side with smaller max.
 
@@ -37,22 +36,22 @@ The smaller boundary determines the water level, so we can safely process the si
 ```python
 class Solution:
     def trap(self, height: List[int]) -> int:
-        if not height:
-            return 0
-        
-        left, right = 0, len(height) - 1
+        left = 0
+        right = len(height) - 1
+
+        max_left = height[0]
+        max_right = height[right]
         water = 0
-        left_max = height[left]
-        right_max = height[right]
         while left < right:
-            if left_max <= right_max:
+            
+            if max_left <= max_right:
                 left += 1
-                left_max = max(left_max, height[left])
-                water += left_max - height[left]
+                water += max(0, max_left - height[left])
+                max_left = max(height[left], max_left)
             else:
                 right -= 1
-                right_max = max(right_max, height[right])
-                water += right_max - height[right]
+                water += max(0, max_right - height[right])
+                max_right = max(height[right], max_right)
         
         return water
 ```
