--- a/content/03-LeetCode/Problems/0049.Group_Anagrams.md
+++ b/content/03-LeetCode/Problems/0049.Group_Anagrams.md
@@ -21,6 +21,7 @@ Anagram: same character & freq, different order
 Method 1: Brute force, sorting then group time:O($n*klogk + O(n*k$ )
 Method 2: Hashmap
 ## Method - Hashmap
+> Build a “signature” for each word, use it as the hash map key, and group words with the same signature.
 ### Approach 
 Create a hashmap: signature -> list of words
 For each word:
