--- a/content/03-LeetCode/Problems/0121.Best_Time_to_Buy_and_Sell_Stock.md
+++ b/content/03-LeetCode/Problems/0121.Best_Time_to_Buy_and_Sell_Stock.md
@@ -11,6 +11,8 @@ Track: NeetCode150
 ### Restate the problem
 Given an array, where `prices[i]` is the stock price on day`i`, choose one day to buy and a later day to sell to maximize profit. Return the maximum profit, return `0` if no profitable transition exists.
 
+> Keep the minimum price so far; at each day, treat today as the sell day and update the best profit.
+
 ---
 
 Method 1 - Brute force, loop twice, cal profit, O($n^2$) time, O(1) space.
@@ -42,6 +44,7 @@ class Solution:
 
 ---
 # History
+Jan-25-2026 Solved
 Jan-23-2026 Solved 
 - Can optimal, don't need max_profit > 0 check
 Jan-19-2026 Solved
