--- a/content/03-LeetCode/Problems/0402.Remove_K_Digits.md
+++ b/content/03-LeetCode/Problems/0402.Remove_K_Digits.md
@@ -13,6 +13,7 @@ Track: NeetCode150
 - Return the answer as a **string**, and it must **not have leading zeros**
 - remove exactly `k` digits, so the resulting number is **as small as possible**.
 
+> Whenever the next digit is smaller than the previous digit, we should remove the previous larger digit (if we still have k removals) to make the number as small as possible.
 ---
 
 Method 1
@@ -55,6 +56,9 @@ class Solution:
 
 ---
 # History
+Jan-25-2026 Solved w bug
+- `stack = stack[:k]` to slice
+
 Jan-24-2026 Solved w bug
 - `lstrip` only works on `str`
 
