--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -1,17 +1,18 @@
 Solved/ Hinted/ Peeked
+### Jan-25
+- [[0881.Boats_to_SavePeople]] Peeked
 ### Jan-24
-[[0189.Rotate_Array]] hinted
-
+- [[0189.Rotate_Array]] hinted
 ### Jan-23
-[[0005.Longest_Palindromic_Substring]] solved w bug
-[[0417.Pacific_Atlantic_Water_Flow]]
-[[1004.Max_Consecutive_Ones_III]]
-[[0049.Group_Anagrams]] solved
-[[0014.Longest_Common_Prefix]] hinted
-- only need `min_length`
-- don't know how to cal the `min_length`
-- `min_len = min(len(word) for word in strs)`
-[[1636.Sort_Array_by_Increasing_Frequency]]
+- [[0005.Longest_Palindromic_Substring]] solved w bug
+ - [[0417.Pacific_Atlantic_Water_Flow]]
+ - [[1004.Max_Consecutive_Ones_III]]
+ - [[0049.Group_Anagrams]] solved
+ - [[0014.Longest_Common_Prefix]] hinted
+	- only need `min_length`
+	- don't know how to cal the `min_length`
+	- `min_len = min(len(word) for word in strs)`
+- [[1636.Sort_Array_by_Increasing_Frequency]]
 
 ### Jan-22
 [[0056.Merge_Intervals]] 
@@ -21,7 +22,7 @@ Solved/ Hinted/ Peeked
 Jan-22-2026 Solved w bug, took too long time
 - `digital string` can compare
 - use `while` to deal with stack
-- `join()` only work with strings
+- `str.join()` works with any iterable of strings
 - `lstrip()` only work with strings, to eliminate `'0'`
 
 [[0146.LRU_Cache]] Hinted w bug
@@ -44,9 +45,8 @@ Redo
 - [[0155.Jump_Game]] Solved w bug
 
 Review:
-- [ ] [[3528.Unit_Conversion_I]] Jan-22
+- [ ] [[3528.Unit_Conversion_I]] 
 ### Jan-20
-Done:
 - [[0049.Group_Anagrams]] Solved w bug
 	1) `''.join(string)` better to use `tuple(counts)`
 	2) `from collections import defaultdict`
@@ -56,7 +56,8 @@ Done:
 Done:
 - [[0173.Binary_Search_Tree_Iterator]] Solved DFS method, Hinted stack method
 - [[0005.Longest_Palindromic_Substring]] Solved w bug, forget to restore pointer
-- [[1507.Reformat_Date]] hinted, don't know `zfill`
+- [[1507.Reformat_Date]] hinted, don't know 
+	- `zfill()` is a **string method** that pads zeros on the left
 - [[0014.Longest_Common_Prefix]] Solved, need clear explanation
 - [[0236.Lowest_Common_Ancestor_of_BT]] Solved w bug, bad explanation
 - [[0543.Diameter_of_Binary_Tree]] Peeked, no idea, use global variable
@@ -118,10 +119,9 @@ def minimum_time(logs):
     return cost
 ```
 
-###### LC3. Longest Substring Without Repeating Characters 
-[leetcode3](https://leetcode.com/problems/longest-substring-without-repeating-characters/)
-Solve Type: Solution, need redo
-Mistake: forget sliding window concept (Variable size window)
+- [leetcode3](https://leetcode.com/problems/longest-substring-without-repeating-characters/)
+	- Solve Type: Solution, need redo
+	- Mistake: forget sliding window concept (Variable size window)
 
 1. Restate the problem: Given a string of lowercase letters, return the length of the longest substring that contains **no repeated characters**.
 2. Key point: Use sliding window with two pointers and a frequency hashmap. 
@@ -298,12 +298,15 @@ Solve Type: Answer, bad explanation
 
 ### Jan-16
 Redo: 
-[[0133.Clone_Graph]] - forget edge case, should return `None`
+- [[0133.Clone_Graph]] - forget edge case, should return `None`
+
 Review:
-[[0695.Max_Area_of_Island]] - Solved, debug
-[[0042.Trapping_Rain_Water]] - Solved, need clear explanation and clean code
+- [[0695.Max_Area_of_Island]] - Solved, debug
+- [[0042.Trapping_Rain_Water]] - Solved, need clear explanation and clean code
 
 ### Jan-17
-Review: [[0912.Sort_an_Array]] - Solved with bug, condition wrong
-[[1636.Sort_Array_by_Increasing_Frequency]]
+Review:
+- [[0912.Sort_an_Array]]
+	- Solved with bug, condition wrong
+- [[1636.Sort_Array_by_Increasing_Frequency]]
 
