--- a/content/03-LeetCode/Problems/0402.Remove_K_Digits.md
+++ b/content/03-LeetCode/Problems/0402.Remove_K_Digits.md
@@ -65,5 +65,5 @@ Jan-24-2026 Solved w bug
 Jan-22-2026 Solved w bug, took too long time
 - `digital string` can compare
 - use `while` to deal with stack
-- `join()` only work with strings
+- `str.join()` works with any iterable of strings
 - `lstrip()` only work with strings, to eliminate `'0'`
