--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -1,4 +1,6 @@
 Solved/ Hinted/ Peeked
+### Jan-31
+- [[0238.Product_of_Array_Except_Self]] Solved w bug
 ### Jan-25
 - [[0881.Boats_to_SavePeople]] Peeked
 ### Jan-24
