--- a/content/03-LeetCode/Problems/0207.Course_Schedule.md
+++ b/content/03-LeetCode/Problems/0207.Course_Schedule.md
@@ -59,4 +59,5 @@ class Solution:
 
 ---
 # History
-Jan-18-2026 solved w/o bug, clear explanation - directed graph, wrong space $O(V+E)$
+Jan-18-2026 solved w/o bug, 
+- clear explanation - directed graph, wrong space $O(V+E)$
