--- a/content/03-LeetCode/Daily-Log/Feb-2026.md
+++ b/content/03-LeetCode/Daily-Log/Feb-2026.md
@@ -1,3 +1,9 @@
+Feb-07
+- [[0007.Reverse_Integer]] Peeked
+	- Integers don’t have a `.reverse()` method (only lists do).
+	- Math way to reverse an integer
+- [[3752.Lexicographically_Smallest]] Peeked No idea
+
 Feb-06
 - [[0003.Longest_Substring_wo_Repeating_Characters]] Solved
 - [[0169.Majority_Element]] Solved w/o bug
