--- a/content/03-LeetCode/Daily-Log/Feb-2026.md
+++ b/content/03-LeetCode/Daily-Log/Feb-2026.md
@@ -1,3 +1,7 @@
+Feb-08
+- [[0098.Validate_Binary_Search_Tree]] Peeked
+	- [ ] redo: [[0098.Validate_Binary_Search_Tree]]
+
 Feb-07
 - [[0007.Reverse_Integer]] Peeked
 	- Integers don’t have a `.reverse()` method (only lists do).
