--- a/content/05-BQ/00-BQ.md
+++ b/content/05-BQ/00-BQ.md
@@ -1,29 +1,40 @@
+
+
+|     | Leadership principle            |
+| --- | ------------------------------- |
+| 0   | Why company?                    |
+| 1   | Customer Obsession              |
+| 2   | Are Right, A lot                |
+| 3   | Ownership                       |
+| 4   | Bias For Action                 |
+| 5   | Think Big                       |
+| 6   | Invent & Simplify               |
+| 7   | Learn and Be Curious            |
+| 8   | Dive Deep                       |
+| 9   | Insist On the Highest Standards |
+| 10  | Earn Trust                      |
+| 11  | Deliver Result                  |
+
+## Customer Obsession
+
+| Customer Obsession | Question                                                                                                                                                                                                                               |
+| ------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Postive            | 1. Tell me a time when you made a suggestion for clients.<br>2. When you're working with a large number of customers, it's tricky to deliver excellent service to them all. So how do you go about prioritizing your customer's needs? |
+| Negtive            | 1. Describe a difficult interaction you had with your client.                                                                                                                                                                          |
+
+
 1) Tell me about a time when you had to meet a tight deadline and make quick decisions.
-
 2) Describe a situation where you had to make an important decision without being able to consult your manager.
-
 3) Tell me about a time when you went above and beyond, taking on responsibilities outside your job description.
-
 4) What is your most proud project and why?
-
 5) Tell me about a time when you had to make a decision with incomplete data or information.
-
 6) What is another qualification you have that hasn't been shown in this interview yet?
-
 7) Describe a time when you took ownership of a problem and went the extra mile to solve a customer issue.
-
 8) Tell me about a time when you had to learn a new technology or skill quickly to accomplish a task.
-
 9) Describe a situation where you faced significant challenges but still delivered results on time.
-
 10) Share an example of when you saw an opportunity and took action right away instead of waiting for instructions.
-
 11) Share an example of when you had to dive deep into a problem to find the root cause.
-
 12) Describe a time when you disagreed with a team member or manager but committed to the decision anyway.
-
 13) Describe a situation where you needed to build trust within a team, especially when you were new or faced skepticism.
-
 14) Tell me about your most challenging project and how you overcame the difficulties.
-
 15) Describe a time when you had a conflict with a team member and how you resolved it.
