--- a/content/04-Tech/05-Could-DevOps/AWS/boto3/02-S3 Bucket/01.Create S3 Bucket.md
+++ b/content/04-Tech/05-Could-DevOps/AWS/boto3/02-S3 Bucket/01.Create S3 Bucket.md
@@ -73,3 +73,12 @@ def check_bucket_exist(bucketname, region):
         if code == "403":
             print(f"--- AccessDenied ----")
 ```
+
+
+### Enable versioning
+```python
+s3.put_bucket_versioning(
+	Bucket=bucket,
+	VersioningConfiguration={"Status": "Enabled"},
+)
+```
