--- a/content/04-Tech/05-Could-DevOps/AWS/boto3/03-DynamoDB/01.Create Dynamo DB.md
+++ b/content/04-Tech/05-Could-DevOps/AWS/boto3/03-DynamoDB/01.Create Dynamo DB.md
@@ -1,5 +1,6 @@
+DynamoDB is a regional service
 
-### Add `boto3.s3` type stubs
+### Add `boto3.`s3` type stubs
 ```bash
 pip install "boto3-stubs[dynamodb]"
 ```
@@ -64,19 +65,3 @@ def check_table_exist(table, regions):
             print(f"--- AccessDenied ----")
 ```
 
-### Add attributes
-if `bucket_name` as HASH key, must add items to store records.
-```python
-dynamodb = boto3.client("dynamodb", region_name="us-west-2")
-
-dynamodb.put_item(
-    TableName="S3-object-size-history",
-    Item={
-        "bucket_name": {"S": "TestBucket"},                 # PK
-        "computed_at": {"N": str(int(time.time() * 1000))}, # SK
-        "total_size_bytes": {"N": "123456"},                # extra attribute
-        "total_objects": {"N": "42"},                       # extra attribute
-        "note": {"S": "triggered by s3 event"}              # extra attribute
-    }
-)
-```
