--- a/content/04-Tech/05-Could-DevOps/AWS/boto3/05.Get S3 Bucket size.md
+++ b/content/04-Tech/05-Could-DevOps/AWS/boto3/05.Get S3 Bucket size.md
@@ -1,5 +1,4 @@
-
-### List S3 bucket all obj
+### List S3 bucket all obj use `paginator`
 - Create a paginator for the S3 `list_objects_v2` operation so you can list all objects in a bucket across multiple pages.
 - `paginator=s3.get_paginator("list_objects_v2")`
 
