--- a/content/03-LeetCode/Daily-Log/Feb-2026.md
+++ b/content/03-LeetCode/Daily-Log/Feb-2026.md
@@ -1,3 +1,12 @@
+Feb-11
+- Done:
+	- [[0199.Binary_Tree_Right_Side_View]] - Solved
+	- [[0560.Subarray_Sum_Equals_K]] - Peeked
+		-  use wrong algorithm
+	- [[0739.Daily_Temperatures]] - Peeked
+- Redo:
+	- [ ] redo: [[0560.Subarray_Sum_Equals_K]] 
+
 Feb-08
 - [[0098.Validate_Binary_Search_Tree]] Peeked
 	- [ ] redo: [[0098.Validate_Binary_Search_Tree]]
