--- a/content/03-LeetCode/Problems/0098.Validate_Binary_Search_Tree.md
+++ b/content/03-LeetCode/Problems/0098.Validate_Binary_Search_Tree.md
@@ -45,6 +45,17 @@ class Solution:
         return dfs(root, float('-inf'), float('inf'))
 ```
 
+
+Sample:
+```
+5 low: -inf high: inf
+    - left: 1  low: -inf high: 5
+        - true, true
+    - right: 4 low: 5 high: inf ---> return False
+        - left: 3 low: 5 high: 4
+        - right: 6 low: 4 high: inf
+```
+
 ---
 # History
 - Jan-08-2026 Peeked
