--- a/content/04-Tech/05-Could-DevOps/AWS/boto3/03-DynamoDB/04.Get item.md
+++ b/content/04-Tech/05-Could-DevOps/AWS/boto3/03-DynamoDB/04.Get item.md
@@ -1,8 +1,12 @@
 `GetItem` is a DynamoDB **read operation** that fetches one single item using its primary key.
 - If your table has Partition Key (PK) only, you provide that one key.
 
+DynamoDB
 - ProjectionExpression
 	- tells DynamoDB which attributes (fields) to return.
+- ExpressionAttributeNames
+	- `ExpressionAttributeNames={'n': 'Name'}`
+	- some attribute names can’t be used directly
 - DynamoDB has two read consistency modes:
 	- Default: Eventually consistent
 		- may briefly return an older value right after an update
