--- a/content/04-Tech/05-Could-DevOps/AWS/boto3/03-DynamoDB/05.Query DynamoDB.md
+++ b/content/04-Tech/05-Could-DevOps/AWS/boto3/03-DynamoDB/05.Query DynamoDB.md
@@ -1,6 +1,11 @@
 ### Query
 
 #### use condition to query
+- ExpressionAttributeNames
+	- A map of placeholder names (like `#n`) to **real attribute names** in DynamoDB.
+- ExpressionAttributeValues
+	- A map of placeholder values (like `:v`) to the **actual values** you want to use.
+
 ```python
 dynamodb = boto3.client("dynamodb")
 now_ms = time.time() * 1000
