--- a/content/04-Tech/05-Could-DevOps/Redis/01. What is redis.md
+++ b/content/04-Tech/05-Could-DevOps/Redis/01. What is redis.md
@@ -1,4 +1,4 @@
-Redis
-- an in-memory (RAM)
-- **key–value** data store
-- supports [[TTL]]/expiration
+- Redis
+	- an in-memory (RAM)
+	- **key–value** data store
+	- supports [[TTL]]/expiration
