--- a/content/04-Tech/05-Could-DevOps/AWS/00-IAM/00.IAM Overview.md
+++ b/content/04-Tech/05-Could-DevOps/AWS/00-IAM/00.IAM Overview.md
@@ -1,9 +1,10 @@
-## Overview
-**AWS Identity and Access Management (IAM)** is the service that controls who can access what in your AWS account. It's the foundation of AWS security.
+- **AWS Identity and Access Management (IAM)**
+	- is the service that controls who can access what in your AWS account. 
+	- It's the foundation of AWS security.
 
 ---
 
-## Core Concepts You Should Know
+## Core Concepts
 
 ### 1. IAM Users
 - **What**: Individual identities (people or applications) that can access AWS resources
